<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="cancel">取消</string>
    <string name="app_name">旺财</string>
    <string name="hello_world">123123</string>
    <string name="action_settings">Settings</string>
	<string name="app_description">旺财</string>
	<string name="balance">账户余额:</string>
	<string name="rmb_symbol">￥</string>
	<string name="balance_unit">元</string>
	<string name="sign_in">签到捡钱</string>
	<string name="extract_cash">提取现金</string>
	<string name="recommand_task">推荐任务</string>
	<string name="remain_task_money">今天还能赚：</string>

	<string name="task_complete">已完成</string>

	<string name="select_gift_lebal">请选择要兑换的商品：</string>
	
	
	<string name="risk_hint">近日有投诉个别厂商的任务存在恶意行为，目前问题应用已下架，建议用户体验应用前，安装一款安全软件如“腾讯手机管家”等</string>
	
	<string name="agree">同意</string>
	<string name="disagree">拒绝</string>
	<string name="menu">菜单</string>
	<string name="my_wangcai">我的旺财</string>
	<string name="cash_extract">现金提取</string>
	<string name="task_detail">交易明细</string>
	<string name="exchange_gift">超值换购</string>
	<string name="get_money_by_invite">邀请送红包</string>
	<string name="options">功能设置</string>
	<string name="help">客服帮助</string>
	
	<string name="extract_phonebill" >话费充值</string>
	<string name="extract_alipay">现金提取</string>
	<string name="extract_qbi">腾讯Q币</string>

	<string name="extract_activity_title">现金提取</string>

	<string name="show_complete_task">点击查看已领取的红包</string>

	<string name="extract_succeed">您的订单已确认</string>
	<string name="extract_order_number_label">单号：</string>
	<string name="extract_succeed_tip">注：提现在一个工作日内到账，请耐心等待</string>

	<string name="extract_dialog_phone_account">充值账号：%1$s</string>
	<string name="extract_dialog_phone_money">充值金额：%1$s元</string>
	<string name="extract_dialog_phone_money_with_discount">充值金额：%1$s元，返现%2$s元</string>

	<string name="extract_dialog_alipay_account">提现账号：%1$s</string>
	<string name="extract_dialog_alipay_money">提现金额：%1$s元</string>
	<string name="extract_dialog_alipay_money_with_discount">提现金额：%1$s元，返现%2$s元</string>
	
	<string name="extract_dialog_qq_account">充值QQ号：%1$s</string>
	<string name="extract_dialog_qq_money">充值金额：%1$s元</string>
	<string name="extract_dialog_qq_money_with_discount">充值金额：%1$s元，返现%2$s元</string>

	<string name="level_label">等级：</string>
	<string name="level_unit">级</string>	
	<string name="level_privilege_tip">可获得%1$d%%额外的红包</string>	 
	
	<string name="write_invite_code_tip">输入邀请码</string>
	<string name="my_invite_code_tip">我的邀请码</string>
	<string name="invite_other">邀请好友</string>
	<string name="the_one_invite_me">谁邀请我</string>
	<string name="input_code_tip">请输入邀请码</string>

	<string name="my_level">我的等级</string>
	<string name="close_button">关闭</string>
	<string name="loading_text">处理中，请稍后……</string>
	<string name="cancel_text">取消</string>
	<string name="ok_text">确定</string>
	<string name="retry_text">重试</string>
	<string name="exit_text">重试</string>
	<string name="attention_text">注意</string>

	<string name="bind_phone_hint_text">您还没绑定手机，为了有效兑换，请</string>
	<string name="bind">绑定</string>
	<string name="bind_phone">绑定手机</string>
	<string name="china_area">中国地区</string>
	<string name="hint_bind_phone">尚未绑定手机，请先绑定手机</string>
	<string name="hint_input_phone_number">请输入手机号</string>
	<string name="hint_invlide_phoneNumber">请输入有效的手机号码</string>
	<string name="hint_bind_phone_limit">一个手机号一个月内最多绑定3台设备，你已绑定了第%d台设备，请谨慎使用剩余机会。</string>
	<string name="bind_phone_count_down">%1$d秒后重发</string>
	<string name="hint_send_sms_fail">发送验证短信失败</string>
	<string name="hint_input_captcha">请输入验证码</string>
	<string name="hint_invite_captcha">请输入5位数的验证码</string>
	<string name="hint_verifying_captcha">正在检验验证码……</string>
	<string name="hint_verify_captcha_fail">验证码错误，请重新输入</string>
	<string name="hint_invlide_invite_code">请输入正确的邀请码</string>
	<string name="hint_bind_invite_code_succeed">绑定邀请人成功</string>
	<string name="hint_bind_invite_code_fail">绑定邀请人失败</string>
	<string name="hint_input_invite_code">请输入邀请码</string>
	<string name="input_invite_code_lable">输入邀请码</string>

	<string name="write_invite_code_title">填写邀请人</string>

	<string name="invite_award_tip_title">邀请码红包</string>
	<string name="new_invite_award_tip_title">分享送红包</string>
	<string name="new_lottery_award_tip_title">获得签到红包</string>
	<string name="new_invite_award_tip_titpe">获得邀请码红包</string>
	<string name="new_app_award_tip_title">获得应用体验红包</string>
	<string name="new_award_tip_level_benefit">等级加成+%1$d%%</string>
	<string name="lotter_no_award_tip">两手空空，明天再来吧</string>

	<string name="resend">重新发送</string>
	<string name="invite_activity_title">邀请送红包</string>
	
	<string name="invite_friend_award">好友奖励: %1$s元</string>
	<string name="invite_award_tip">获得额外10%的好友任务奖励</string>
	<string name="view_detail">查看详情</string>

	<string name="copy_succeed">复制成功</string>

	<string name="invite_rull_detail_title">如何成为推广员</string>
	
	<string name="leve_up_titel">恭喜您升级到</string>
	<string name="level_value_label">LV%1$d</string>
	<string name="additional_percent_label">额外红包：</string>
	<string name="new_skill_lable">获得技能：</string>
	<string name="leve_up_award_label">升级奖励：</string>
	<string name="skill3">百发百中</string>	
	<string name="skill5">基友情深</string>	
	<string name="skill10">一石二鸟</string>	
	
	<string name="unlock_at_level">LV%1$d解锁：</string>
	
	<string name="lv3_benefit">签到大转盘中奖率100%</string>
	<string name="lv5_benefit">好友奖励提升至15%</string>
	<string name="lv10_benefit">有机会获得双倍任务奖励</string>
	
	<string name="app_update_hint_title">更新</string>
	    
	<string name="hint_over_5_yuan_bind_phone">您已积累了超过5元红包，为了红包的安全建议立即绑定手机号。</string>
	<string name="hint_sward_share">恭喜您中奖，快来分享给朋友们吧！</string>
	<string name="hint_update_wangcai">发现新版旺财！更安全更好赚，请立即升级。</string>
	<string name="hint_network_error">当前网络不可用，请检查网络连接</string>
	<string name="hint_request_error">请求失败</string>
	<string name="hint_new_install_award">新装旺财获得红包</string>
	<string name="hint_no_enough_balance">您的余额不足以支付</string>
	<string name="hint_duplicate_signin">今天已经签到过了，明天记得来哟</string>
	<string name="hint_alipay_account_empty">请输入支付宝账号</string>
	<string name="hint_phone_number_empty">请输入手机号码</string>
	<string name="hint_qq_number_empty">请输入QQ号码</string>
	<string name="hint_input_not_match">两次输入不一致，请重新输入</string>
	<string name="hint_realname_empty">请输入姓名</string>
	<string name="hint_extract">注：提现在一个工作日内到账，请耐心等待</string>
	<string name="confirm_extract">确认提现</string>
	<string name="hint_exchange_succeed">恭喜您，换购请求已确认，请您耐心等待。</string>
	<string name="exchange_complete">交易完成</string>

	<string name="help_actiity_title">常见问题</string>

	<string name="user_info_title">填写信息</string>
	<string name="my_infomation">我的信息</string>
	<string name="my_infomation_hint">信息越准确，任务越符合你的喜好</string>
	<string name="sex">性别</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="age">年龄</string>
	<string name="select_help_hint">请输入你感兴趣的关键字（多选）</string>
	<string name="userinfo_relaxation_game">休闲游戏</string>
	<string name="userinfo_rpg_game">升级打宝</string>
	<string name="userinfo_ebuy">打折促销</string>
	<string name="userinfo_social_contact">结交朋友</string>
	<string name="userinfo_travel">旅行生活</string>
	<string name="userinfo_competitive_game">竞技游戏</string>
	<string name="userinfo_sport">强身健体</string>
	<string name="userinfo_beautify">美丽达人</string>
	<string name="userinfo_confirm">确认并领取1元</string>
	<string name="hint_select_interest">请选择至少一个兴趣</string>
	<string name="hint_select_age">请选择年龄</string>
	<string name="hint_select_sex">请选择性别</string>

	<string name="invite_activity_button">分享赚红包</string>

	<string name="write_invaite_code_get_award">领取2元</string>
	<string name="task_level_limit_hint">该任务需要等级达到%1$d级才能进行</string>

	<string name="share_title">玩应用领红包</string>
	<string name="share_url_description">旺财分享</string>
	<string name="invite_share_content">妈妈再也不用担心我的话费了，旺财下载地址:%1$s</string>
	<!-- 	qzone会批量掉内容里面的url -->
	<string name="qzone_invite_share_content">妈妈再也不用担心我的话费了</string>
	
	<string name="wangcai_share">旺财分享</string>
	<string name="share_content">我用旺财赚了%1$s元，你也可以的，填我的邀请码%2$s可领取2元红包。旺财下载地址:%3$s</string>
	<string name="qzone_share_content">我用旺财赚了%1$s元，你也可以的，填我的邀请码%2$s可领取2元红包</string>

	<string name="phone_bill">手机话费</string>
	<string name="paypal">支付宝</string>
	<string name="tecent_qbi">腾讯Q币</string>
	<string name="extract_money_hint">即时到帐，多重多送</string>
	<string name="recharge">充值</string>
	
	<string name="extract_alipay_lebal">请输入支付宝信息</string>
	<string name="extract_qbi_lebal">请输入QQ号码</string>
	<string name="extract_phone_bill_lebal">请输入手机号码</string>
	<string name="extract_phone_bill_sub_text">（提醒：仅限中国大陆地区）</string>

	<string name="extract_label">充值数额：</string>

	<string name="money_with_unit">%1$s元</string>
	<string name="discount_text">返现%1$s元</string>

	<string name="balance_not_enough">您的余额不足</string>

	<string name="exchage_button_text">兑换  ></string>
	<string name="gift_price_count">价格：%1$s元，剩余：%2$d</string>
	<string name="jidong_card_50">50元京东商品卡</string>
	
	<string name="echange_dialog_name">产品：%1$s</string>
	<string name="echange_dialog_price">价格：%1$s元</string>
	<string name="exchagne_hint_text">兑换需要1-3个工作日，请耐心等待</string>
	<string name="confirm_exchange_text">确认兑换</string>

	<string name="alipay_number_label">支付宝账号：</string>
	<string name="alipay_number_hint">请输入支付宝账号</string>
	<string name="input_agin_label">再次输入：</string>
	<string name="input_agin_hint">请再输入一遍</string>
	<string name="alipay_realname_label">支付宝实名：</string>
	<string name="alipay_realname_hint">请输入您的姓名</string>
	<string name="phone_number_label">手机号码：</string>
	<string name="phone_number_hint">请输入充值的手机号码</string>
	<string name="qq_number_label">QQ号码：</string>
	<string name="qq_number_hint">请输入充值的QQ号码</string>

	<string name="xunlei_white_gold_card">迅雷白金会员月卡</string>

	<string name="usable_balance">可用余额：%1$s元</string>
	
	<string name="app_wall_win_title">安装应用获得丰厚奖励</string>
	<string name="app_wall_win_text">请按应用要求安装并试玩一段时间后(部分要求注册)，返回旺财即可领取红包。部分时间由于网络延迟，红包不能立即到账，请耐心等待。注意：&lt;font color="red"&gt;相同的应用只能领取一次奖励&lt;/font&gt;，且在在接受任务前已安装的应用不能领取红包。</string>
	<string name="important_tip">重要提示</string>
	<string name="more">更多</string>
	
	<string name="return_text">返回</string>

	<string name="setting_push_title">接受消息</string>
	<string name="setting_push_text">有任务的时候通过消息提醒</string>

	<string name="setting_sournd_title">声音</string>
	<string name="setting_sournd_text">有新任务的时候通过声音提醒</string>

	<string name="setting_version_title">版本号：%1$s</string>
	<string name="setting_version_text">使用条款和隐私政策</string>

	<string name="load_error">加载失败</string>	
	
	<string name="survey_commit_succeed_title">问卷已提交</string>
	<string name="survey_commit_succeed_text">提交后6小时，人工审核后方可获得红包</string>
	<string name="survey_commit_succeed_button_text">返回问卷中心</string>
	<string name="survey_title">问卷调查</string>
	<string name="survey_rule_title">任务说明</string>
	<string name="survey_rule_sub_title">重要说明</string>
	<string name="survey_rule_text1">● 请仔细阅读并填写问卷内容，填写完成后6小时内会由人工审核有效性并发放红包。</string>
	<string name="survey_rule_text2">● 旺财问卷中心为企业和开发者与用户间实现有效的沟通，有准确的捕捉用户需求。</string>
	<string name="survey_rule_text3">● 任何媒体或互联网站不得擅自转载本网站由其他单位提供的信息和服务内容，如需转载，必须与相应提供单位直接联系获得合法授权。</string>
	
	<string name="app_wall_puncbox_text">触控体验中心</string>
	<string name="app_wall_youmi_text">有米体验中心</string>
	<string name="app_wall_mopan_text">磨盘体验中心</string>
	<string name="app_wall_jupeng_text">巨鹏体验中心</string>
	<string name="app_wall_midi_text">米迪体验中心</string>
	<string name="app_wall_anwo_text">安沃体验中心</string>
	<string name="app_wall_domob_text">多盟体验中心</string>
	<string name="app_wall_wanpu_text">万普体验中心</string>
	<string name="app_wall_dianle_text">点乐体验中心</string>
	<string name="app_wall_winads_text">赢告无限体验中心</string>
</resources>
