<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:wangcai = "http://schemas.android.com/apk/res/com.coolstore.wangcai"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<com.coolstore.wangcai.ctrls.TitleCtrl xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/title"
		wangcai:titleText="@string/survey_rule_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/button_frame"
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:layout_alignParentBottom="true"
	    android:background="#FEFEFE"
	    >
        <Button 
            android:id="@+id/disagree_button"
            android:text="@string/disagree"
            android:background="@drawable/survey_rulle_disagree_button"
		    android:layout_width="90dp"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_marginLeft="40dp"
		    />
        <Button 
            android:id="@+id/agree_button"
            android:text="@string/agree"
            android:background="@drawable/survey_rulle_agree_button"
		    android:layout_width="90dp"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="40dp"
		    />
    </RelativeLayout>
	<LinearLayout
	    android:orientation="vertical" 
	    android:background="#E4E3E8"
	    android:padding="20dp"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/title"
	    android:layout_above="@id/button_frame"
	    >
	    <TextView
	        android:text="@string/survey_rule_sub_title"
	        android:textSize="32sp"
	        android:textColor="#000000"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    />
	    <TextView
	        android:text="@string/survey_rule_text1"
	        android:textSize="20sp"
	        android:textColor="#000000"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dp"
		    />
	    <TextView
	        android:text="@string/survey_rule_text2"
	        android:textSize="20sp"
	        android:textColor="#000000"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dp"
		    />
	    <TextView
	        android:text="@string/survey_rule_text3"
	        android:textSize="20sp"
	        android:textColor="#000000"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dp"
		    />
	</LinearLayout>

</RelativeLayout>
