<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:wangcai = "http://schemas.android.com/apk/res/com.coolstore.wangcai"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:orientation="vertical"
	android:background="#FFFFFF" >
	<com.coolstore.wangcai.ctrls.TitleCtrl xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/title"
		wangcai:titleText="@string/invite_activity_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	<LinearLayout 
		android:id="@+id/invite_panel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" 
		android:paddingLeft="15dp"
		android:paddingRight="15dp" >
		<ImageView
			android:id="@+id/qrcode"
			android:layout_gravity="center_horizontal"
			android:layout_width="@dimen/qrcode_size"
			android:layout_height="@dimen/qrcode_size"	/>
		<TextView 
			android:id="@+id/my_invite_code_tip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="#000000"
			android:text="@string/my_invite_code_tip" /> 
		<!--  邀请码 -->
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:background="@drawable/invite_invite_code_bkg">
			<TextView 
				android:id="@+id/invite_code"	
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true" /> 
		</RelativeLayout>
		<RelativeLayout
			android:layout_marginTop="15dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
				<ImageButton 
					android:id="@+id/copy_url_button"
					android:background="@drawable/invite_copy_button"
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
				/> 
				<FrameLayout
				    android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/copy_url_button"
				    android:background="@drawable/invite_edit_bkg" >
					<TextView 
						android:id="@+id/invite_url_text"
						android:layout_width="180dp"
						android:layout_height="wrap_content"
						android:ellipsize="end"
						android:singleLine="true"
						android:textColor="#b0b0b0"
						android:layout_gravity="center_vertical" />
				</FrameLayout> 
		</RelativeLayout>
		<Button 
			android:layout_marginTop="15dp"
			android:id="@+id/share_button"
			android:textColor="#ffffff"
			android:textSize="20sp"
			android:text="@string/invite_activity_button"
			android:background="@drawable/invite_share_button"
			android:layout_width="match_parent"
			android:layout_height="60dp" /> 
		<TextView 
			android:id="@+id/friend_award"
			android:layout_marginTop="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:layout_gravity="center_vertical"
			android:text="@string/invite_friend_award" />
		<RelativeLayout
			android:layout_marginTop="15dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<TextView 
				android:id="@+id/award_tip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:layout_centerVertical="true"
				android:text="@string/invite_award_tip" />
			<TextView 
				android:id="@+id/view_detail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:textColor="#0000ff"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:text="@string/view_detail" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>
