<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wangcai="http://schemas.android.com/apk/res/com.coolstore.wangcai"
	android:id="@+id/main_wnd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#FFFFFF" 
    android:orientation="vertical" >

	<com.coolstore.wangcai.ctrls.TitleCtrl xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/title"
		wangcai:titleText="@string/my_wangcai"
		wangcai:returnImg="@drawable/back2"
		wangcai:bkgImg="@drawable/nav_title2"
		wangcai:titleTextColor="#000000"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:scaleType="center" 
		android:background="@drawable/mywangcai_up_bg"
		>
		<ImageView
			android:id="@+id/dog_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="35dp"
			android:layout_marginLeft="25dp"
			android:background="@drawable/mywangcai_dog_1"
			/>
		
		<TextView
			android:id="@+id/level_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/dog_image"
			android:layout_marginLeft="40dp"
			android:layout_marginTop="70dp"
			android:text="@string/level_label" />

		<TextView
			android:id="@+id/level_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:textSize="28sp"
		    android:textColor="#FF0000"
		    android:layout_alignBottom="@id/level_label"
		    android:layout_marginBottom="-6dp"
			android:layout_toRightOf="@id/level_label"/>

		<TextView
		    android:id="@+id/level_unit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="28sp"
		    android:layout_alignBottom="@id/level_value"
		    android:layout_toRightOf="@id/level_value"
		    android:text="@string/level_unit" />


	    <RelativeLayout
			android:id="@+id/progress"
	        android:layout_width="279px"
	        android:layout_height="24px"
		    android:layout_alignLeft="@id/level_label"
		    android:layout_marginTop="10dp"
			android:layout_below="@id/level_label"
			android:scaleType="fitXY"
			android:background="@drawable/mywangcai_jiangyan_bg"
			>
			<ImageView
				android:id="@+id/progress_front"
				android:layout_width="wrap_content"
				android:layout_marginTop="1dp"
				android:layout_marginBottom="1dp"
				android:layout_marginLeft="1px"
				android:layout_height="match_parent"
				android:layout_centerVertical="true"
				android:src="@drawable/mywangcai_jingyan_red"
				/>
		</RelativeLayout>
		<TextView
		    android:id="@+id/level_benefit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@id/level_label"
		    android:layout_marginTop="10dp"
			android:layout_below="@id/progress"
		    android:text="@string/level_privilege_tip" />
		<ViewStub   
		    android:id="@+id/bind_phone_tip"  
		    android:layout_width="wrap_content"  
		    android:layout_height="wrap_content" 
			android:layout_centerHorizontal="true"
		    android:layout="@layout/ctrl_bint_phone_tip"/>  
    </RelativeLayout>


</LinearLayout>
