<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:wangcai = "http://schemas.android.com/apk/res/com.coolstore.wangcai"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#FFFFFF" 
    android:orientation="vertical" >
	<com.coolstore.wangcai.ctrls.TitleCtrl xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/exchange_gift"
		wangcai:titleText="@string/exchange_gift"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:orientation="horizontal" 
		android:background="@drawable/gray_rect" >
			<TextView
				android:id="@+id/usable_balance"
				android:text="@string/usable_balance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="13sp"
				android:layout_marginLeft="@dimen/common_margin_left"
				android:layout_centerVertical="true" />
			<ImageButton 
				android:id="@+id/task_detail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/jiaoyi"
				android:layout_marginRight="@dimen/common_margin_right"	
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true" /> 	
		<ViewStub   
		    android:id="@+id/bind_phone_tip"  
		    android:layout_width="wrap_content"  
		    android:layout_height="wrap_content" 
			android:layout_centerHorizontal="true"
		    android:layout="@layout/ctrl_bint_phone_tip"/>  	
	</RelativeLayout>
	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="32sp"
		android:background="@drawable/gray_rect"
	    >
		<TextView
			android:id="@+id/usable_balance"
			android:text="@string/select_gift_lebal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="@dimen/common_margin_left"
			android:layout_gravity="center_vertical"/>
	    
	</FrameLayout>
	
    <LinearLayout
		android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
	</LinearLayout>
</LinearLayout>